--- a/style/main.scss
+++ b/style/main.scss
@@ -111,6 +111,8 @@ nav {
     button {
       background-color: white;
       box-shadow: 1px 1px 2px #ccc, -1px -1px 2px #ccc;
+      font-weight: 600;
+      padding: 10px 15px;
       border: none;
     }
   }
@@ -118,4 +120,37 @@ nav {
 // End Search
 
 // Start countries
+.countries {
+  .countries-container {
+    .countries-row{
+      display: grid;
+      grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+      gap: 30px;
+    }
+    .box {
+      & {
+        border-radius: 10px;
+        box-shadow: 1px 1px 2px #ccc, -1px -1px 2px #ccc;
+        overflow: hidden;
+        background-color: white;
+        padding: 0px;
+      }
+      img {
+        max-width: 100%;
+      }
+      .content {
+        & {
+          padding: 20px;
+        }
+        h4 {
+          font-size: 1.2rem;
+          font-weight: 800;
+        }
+        span {
+          font-weight: 600;
+        }
+      }
+    }
+  }
+}
 // End countries
