--- a/style/main.scss
+++ b/style/main.scss
@@ -136,7 +136,8 @@ nav {
         padding: 0px;
       }
       img {
-        max-width: 100%;
+        width: 100%;
+        height: 200px;
       }
       .content {
         & {
