--- a/style/main.scss
+++ b/style/main.scss
@@ -253,6 +253,7 @@ nav {
           & {
             flex-direction: column;
             align-items: flex-start;
+            gap: 50px;
           }
         }
         p {
