--- a/style/main.scss
+++ b/style/main.scss
@@ -49,8 +49,10 @@ nav {
         font-size: 1.2rem;
         font-weight: 600;
         text-decoration: none;
-        color: var(--text);
         height: 80px;
+      }
+      span {
+        color: var(--text);
       }
       i {
         margin-right: 5px;
@@ -160,7 +162,7 @@ nav {
       grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
       gap: 30px;
     }
-  
+
     .box {
       & {
         border-radius: 10px;
