--- a/style/main.scss
+++ b/style/main.scss
@@ -174,6 +174,10 @@ nav {
         display: block;
         text-decoration: none;
         cursor: pointer;
+        transition: 0.5s;
+      }
+      &:hover {
+        transform: scale(1.1);
       }
       img {
         width: 100%;
