--- a/style/main.scss
+++ b/style/main.scss
@@ -174,7 +174,7 @@ nav {
         display: block;
         text-decoration: none;
         cursor: pointer;
-        transition: 0.5s;
+        transition: transform 0.5s;
       }
       &:hover {
         transform: scale(1.1);
